// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configureStore and inject reducers, sagas and thunks component A, with reducer and saga 1`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
}
`;

exports[`configureStore and inject reducers, sagas and thunks component A, with reducer and saga 2`] = `null`;

exports[`configureStore and inject reducers, sagas and thunks component A, with reducer and saga 3`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
}
`;

exports[`configureStore and inject reducers, sagas and thunks component B, with reducer and saga 1`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
}
`;

exports[`configureStore and inject reducers, sagas and thunks component B, with reducer and saga 2`] = `null`;

exports[`configureStore and inject reducers, sagas and thunks component B, with reducer and saga 3`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
  "B/testReducer": "Name B",
}
`;

exports[`configureStore and inject reducers, sagas and thunks component C, with reducer and using thunk 1`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
  "B/testReducer": "Name B",
}
`;

exports[`configureStore and inject reducers, sagas and thunks component C, with reducer and using thunk 2`] = `null`;

exports[`configureStore and inject reducers, sagas and thunks component C, with reducer and using thunk 3`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
  "B/testReducer": "Name B",
  "C/testReducer": "Name C",
}
`;

exports[`configureStore and inject reducers, sagas and thunks default store 1`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
}
`;

exports[`configureStore default store, without parameters 1`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
}
`;

exports[`configureStore store with reducers and initialState parameter 1`] = `
Immutable.Map {
  "config": true,
  "route": Immutable.Map {
    "location": null,
  },
}
`;

exports[`configureStore store with reducers parameter 1`] = `
Immutable.Map {
  "route": Immutable.Map {
    "location": null,
  },
  "config": null,
}
`;
